--- a/androidtoggleswitch/build.gradle
+++ b/androidtoggleswitch/build.gradle
@@ -4,16 +4,16 @@ apply plugin: 'kotlin-android'
 ext {
     PUBLISH_GROUP_ID    = 'com.llollox'
     PUBLISH_ARTIFACT_ID = 'androidtoggleswitch'
-    PUBLISH_VERSION     = '2.0.1'
+    PUBLISH_VERSION     = '2.0.4'
 }
 
 android {
-    compileSdkVersion 28
-    buildToolsVersion "28.0.3"
+    compileSdkVersion 29
+    buildToolsVersion "29.0.2"
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
     }
@@ -27,8 +27,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
 
 apply from: 'https://raw.githubusercontent.com/blundell/release-android-library/master/android-release-aar.gradle'
