--- a/androidtoggleswitch/build.gradle
+++ b/androidtoggleswitch/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 ext {
-    PUBLISH_GROUP_ID    = 'com.llollox'
+    PUBLISH_GROUP_ID    = 'com.wozverine'
     PUBLISH_ARTIFACT_ID = 'androidtoggleswitch'
     PUBLISH_VERSION     = '2.0.4'
 }
